@@ -2,6 +2,10 @@ Revision history for Perl extension GDTextUtil.
 
 Sun Jan  9 2000
 
+- Added append of '.ttf' when searching for TTF font files.
+
+Sun Jan  9 2000
+
 - Added font path tests.
 - Allow first argument to set_font to be an array reference to various
   font names that may or may not be present.
